--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div class="glass-container">
         <h1>Our Brand</h1>
-        <p>A warm welcome to you as you go through this website and enjoy a thrill of art expressions.I hope you find what you want</p>
+        <p>We warmly welcome you to our platform, where art is celebrated as both an expression and an experience. This website has been thoughtfully curated to present a collection of works that embody creativity, craftsmanship, and cultural value. Each piece reflects not only the vision of the artist but also the timeless dialogue between imagination and emotion. Our goal is to provide a refined space for collectors, enthusiasts, and admirers to explore distinctive works that enrich both personal and professional environments. Whether you seek a striking focal point, a subtle addition to complement your space, or a meaningful gift, we are dedicated to helping you discover art that resonates with your taste and aspirations. Every work offered through our platform is carefully selected for its authenticity and originality, ensuring that you invest in art of lasting value while supporting the artists who bring these creations to life.</p>
     </div>
 
   <!-- PRODUCTS -->
