--- a/index.html
+++ b/index.html
@@ -103,14 +103,17 @@
   </div>
 
   <!-- VIDEO SECTION -->
+  <div class="glass-container">
   <section id="about-video" class="section">
   <h2>Meet the Artisan</h2>
   <div class="video-container">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/WBwNw4WjV7g?si=2ze446o67yJsYLAj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
 </section>
+</div>
 
   <!-- CHECKOUT FORM -->
+   <div class="glass-container">
   <section id="checkout" class="section">
     <h2>Checkout</h2>
     <form class="checkout-form">
@@ -130,10 +133,11 @@
         <option value="paypal">PayPal</option>
         <option value="applepay">Apple pay</option>
       </select>
-
+      
       <input type="submit" value="Place Order">
     </form>
   </section>
+  </div>
 
   <!-- FOOTER -->
   <footer>
